k8s/manifests/deployment.yaml
#First is line is about the apiVersion of API server we will use to talk to API server
apiVersion: apps/v1

#Next is the type of object we are using in this case it is going to deployment
kind: Deployment

#Next is the metadata about our deployment.yaml file so that we can identiy to run this yaml file!!
metadata:
  name: go-web-app
  labels:
    app: go-web-app

#Next is definition of the container/pods that is gonna be deployed which talks about the number of pods that needs to be runned using replicas and labels that needs to be used for services and the image that neeeds to runned/deployed!!
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-web-app
  template:
    metadata:
      labels:
        app: go-web-app
    spec:
      containers:
        - name: go-web-app
          image: howaboutwepullsomeimages/go-web-app:latest
          ports:
            - containerPort: 8080
