k8s/manifests/ingress.yaml
# The first talks the about the apiVersion of the API server of kubernetes
apiVersion: networking.k8s.io/v1

# Next is the type of object in this case it is Ingress
kind: Ingress

# Next is the meta-data about the Ingress which is then used to identify and run the Ingress
metadata:
  name: go-web-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

# Next is the specification of the ingress this is my first time writing it but most important part of this spec is ingressClassName which is used to identify the ingress by controller to know which ingress to run!!
spec:
  ingressClassName: nginx
  rules:
    - host: "go-web-app.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-web-app
                port:
                  number: 80
